--- a/src/pages/Home.css
+++ b/src/pages/Home.css
@@ -1,161 +1,12 @@
-/*.center {
-  display: flex;
-  justify-content: space-between;
-}
+.display-flex {
+  background-color: rgb(201, 201, 201);
+  /*border: double 5px;*/
 
-.title {
-  font-size: 8vw;
+  width: 100%;
   text-align: center;
   position: absolute;
-  top: 20%;
+  top: 50vh;
   left: 50%;
   -webkit-transform: translate(-50%, -50%);
   transform: translate(-50%, -50%);
 }
-
-.button1 {
-  width: 40vw;
-  position: absolute;
-  top: 48%;
-  left: 50%;
-  -webkit-transform: translate(-50%, -50%);
-  transform: translate(-50%, -50%);
-}
-
-.button2 {
-  width: 40vw;
-  position: absolute;
-  top: 58%;
-  left: 50%;
-  -webkit-transform: translate(-50%, -50%);
-  transform: translate(-50%, -50%);
-}
-
-.button3 {
-  width: 40vw;
-  position: absolute;
-  top: 68%;
-  left: 50%;
-  -webkit-transform: translate(-50%, -50%);
-  transform: translate(-50%, -50%);
-}
-
-.panda {
-  width: 15vh;
-  position: absolute;
-  top: 35%;
-  left: 50%;
-  -webkit-transform: translate(-50%, -50%);
-  transform: translate(-50%, -50%);
-}
-
-@media (max-width: 959px) {*/
-/*.center {
-    text-align: center;
-    position: relative;
-  }
-
-  .title {
-    font-size: 8vw;
-    text-align: center;
-    position: absolute;
-    top: 20%;
-    left: 50%;
-    -webkit-transform: translate(-50%, -50%);
-    transform: translate(-50%, -50%);
-  }
-
-  .button1 {
-    width: 40vw;
-    position: absolute;
-    top: 45%;
-    left: 50%;
-    -webkit-transform: translate(-50%, -50%);
-    transform: translate(-50%, -50%);
-  }
-
-  .button2 {
-    width: 40vw;
-    position: absolute;
-    top: 55%;
-    left: 50%;
-    -webkit-transform: translate(-50%, -50%);
-    transform: translate(-50%, -50%);
-  }
-
-  .button3 {
-    width: 40vw;
-    position: absolute;
-    top: 65%;
-    left: 50%;
-    -webkit-transform: translate(-50%, -50%);
-    transform: translate(-50%, -50%);
-  }
-
-  .panda {
-    width: 13vh;
-    position: absolute;
-    top: 33%;
-    left: 50%;
-    -webkit-transform: translate(-50%, -50%);
-    transform: translate(-50%, -50%);
-  }
-}
-
-@media (max-width: 480px) {*/
-.center {
-  text-align: center;
-  position: relative;
-}
-
-.title {
-  font-size: 6.5vmax;
-  font-weight: bold;
-  text-align: center;
-  position: absolute;
-  top: 20%;
-  left: 50%;
-  -webkit-transform: translate(-50%, -50%);
-  transform: translate(-50%, -50%);
-}
-
-.button1 {
-  width: 50vw;
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  -webkit-transform: translate(-50%, -50%);
-  transform: translate(-50%, -50%);
-}
-
-.button2 {
-  width: 50vw;
-  position: absolute;
-  top: 60%;
-  left: 50%;
-  -webkit-transform: translate(-50%, -50%);
-  transform: translate(-50%, -50%);
-}
-
-.button3 {
-  width: 50vw;
-  position: absolute;
-  top: 70%;
-  left: 50%;
-  -webkit-transform: translate(-50%, -50%);
-  transform: translate(-50%, -50%);
-}
-
-.panda {
-  width: 18vh;
-  position: absolute;
-  top: 35%;
-  left: 50%;
-  -webkit-transform: translate(-50%, -50%);
-  transform: translate(-50%, -50%);
-}
-
-ion-button {
-  --border-radius: 10px;
-}
-/*}*/
