--- a/src/pages/Talk.css
+++ b/src/pages/Talk.css
@@ -1,252 +1,12 @@
-.center {
+.display-flex-talk {
+  background-color:white;
+  /*border: double 5px;*/
+
+  width: 100%;
   text-align: center;
-  position: relative;
-}
-
-.panda_img {
-  width: 45vh;
-  margin-top: 10vh;
-
-  /*text-align: center;
   position: absolute;
-  top: 50%;
-  left: 48%;
-  -webkit-transform: translate(-50%, -50%);
-  transform: translate(-50%, -50%);*/
-}
-
-.test .t {
-  display: inline-block;
-  vertical-align: middle;
-  /*background-color: blue;*/
-}
-
-.h {
-  width: 50vw;
-  font-size: 5vh;
-  text-align: center;
-  display: inline-block;
-  margin: 7vh;
-  /*white-space: nowrap;*/
-}
-
-/*ion-item {
-  font-size: 2.5vh;
-  --background: rgba(255, 0, 0, 0);
-}*/
-
-.answer {
-  width: 50vw;
-  font-size: 3vh;
-  text-align: center;
-  display: inline-block;
-  margin: 7vh;
-}
-
-.balloonpppp {
-  width: 60vw;
-  display: inline-block;
-  border: solid 3px #555;
-  box-sizing: border-box;
-  border-radius: 10px; /*角の丸み*/
-  padding-right: 0.5vw;
-  padding-top: 1vh;
-  text-align: center;
-  position: relative;
-  /*top: 20vh;
-  left: 50vw;
-  -webkit-transform: translate(-50%, -50%);
-  transform: translate(-50%, -50%);*/
-}
-
-.balloonpppp:before {
-  content: "";
-  position: absolute;
-  top: 50%;
-  left: -24px;
-  margin-top: -12px;
-  border: 12px solid transparent;
-  border-right: 12px solid #fff;
-  z-index: 2;
-}
-
-.balloonpppp:after {
-  content: "";
-  position: absolute;
-  top: 50%;
-  left: -30px;
-  margin-top: -14px;
-  border: 14px solid transparent;
-  border-right: 14px solid #555;
-  z-index: 1;
-}
-
-.balloonpppp ion-item {
-  margin: 0;
-  padding: 0;
-}
-
-.textbox {
-  width: 70vw;
-  padding: 0.5em 1em;
-  margin: 2em 0;
-
-  color: black; /*文字色*/
-  background: #fff;
-  border: solid 3px black; /*線*/
-  border-radius: 10px; /*角の丸み*/
-  /*position: absolute;
-  top: 83%;
+  top: 50vh;
   left: 50%;
   -webkit-transform: translate(-50%, -50%);
-  transform: translate(-50%, -50%);*/
-}
-.talkbutton {
-  /*width: 40%;*/
-  text-align: center;
-  margin-left: 8vw;
-  width: 100px;
-  height: 100px;
-  background: rgb(255, 255, 255);
-  /*border-radius: 100%;
-  /*position: absolute;
-  top: 93vh;
-  left: 50%;
-  -webkit-transform: translate(-50%, -50%);
-  transform: translate(-50%, -50%);*/
-}
-
-ion-button {
-  --border-radius: 100%;
-}
-
-/*
-.box2 ion-textarea {
-  margin: 0;
-  padding: 0;
-}*/
-
-@media (max-width: 959px) {
-  .center {
-    text-align: center;
-    position: relative;
-  }
-
-  .panda_img {
-    width: 35vh;
-    text-align: center;
-    position: absolute;
-    top: 43vh;
-    left: 48%;
-    -webkit-transform: translate(-50%, -50%);
-    transform: translate(-50%, -50%);
-  }
-
-  .h {
-    width: 95%;
-    font-size: 3em;
-    text-align: center;
-    display: inline-block;
-    position: absolute;
-    top: 18%;
-    left: 43vw;
-    -webkit-transform: translate(-50%, -50%);
-    transform: translate(-50%, -50%);
-  }
-
-  .balloonpppp .answer {
-    font-size: 1em;
-    text-align: center;
-    display: inline-block;
-  }
-
-  .alert {
-    font-size: small;
-  }
-
-  ion-item {
-    --background: rgba(255, 0, 0, 0);
-  }
-
-  .talkbutton {
-    width: 30%;
-    height: 8%;
-    text-align: center;
-    position: absolute;
-    top: 94vh;
-    left: 43%;
-    -webkit-transform: translate(-50%, -50%);
-    transform: translate(-50%, -50%);
-    border-radius: 10px;
-  }
-
-  ion-button {
-    --border-radius: 10px;
-  }
-
-  .balloonpppp {
-    display: inline-block;
-    border: solid 3px #555;
-    box-sizing: border-box;
-    border-radius: 10px; /*角の丸み*/
-    padding-right: 0.5vw;
-    padding-top: 1vh;
-    text-align: center;
-    position: absolute;
-    top: 20vh;
-    left: 50vw;
-    -webkit-transform: translate(-50%, -50%);
-    transform: translate(-50%, -50%);
-  }
-
-  .balloonpppp:before {
-    content: "";
-    position: absolute;
-    top: 120%;
-    bottom: -24px;
-    left: 50%;
-    margin-left: -15px;
-    margin-right: 15px;
-    border: 12px solid transparent;
-    border-top: 12px solid #fff;
-    z-index: 2;
-  }
-
-  .balloonpppp:after {
-    content: "";
-    position: absolute;
-    top: 125%;
-    bottom: -30px;
-    left: 50%;
-    margin-left: -17px;
-    border: 14px solid transparent;
-    border-top: 14px solid #555;
-    z-index: 1;
-  }
-
-  .balloonpppp ion-item {
-    margin: 0;
-    padding: 0;
-  }
-
-  .textbox {
-    width: 90%;
-    padding: 0.5em 1em;
-    margin: 1% 0;
-
-    color: black; /*文字色*/
-    background: #fff;
-    border: solid 3px black; /*線*/
-    border-radius: 10px; /*角の丸み*/
-    position: absolute;
-    top: 80vh;
-    left: 50%;
-    -webkit-transform: translate(-50%, -50%);
-    transform: translate(-50%, -50%);
-  }
-
-  .box2 ion-textarea {
-    margin: 0;
-    padding: 0;
-  }
+  transform: translate(-50%, -50%);
 }
