--- a/src/pages/Home.css
+++ b/src/pages/Home.css
@@ -1,5 +1,5 @@
 .display-flex {
-  background-color: rgb(201, 201, 201);
+  /*background-color: rgb(201, 201, 201);
   /*border: double 5px;*/
 
   width: 100%;
