--- a/src/pages/Talk.css
+++ b/src/pages/Talk.css
@@ -16,9 +16,9 @@
   background: #ffffff;
   display: inline-block;
   position: relative;
-  width: 75%;
-  padding-top: 0.5rem;
-  padding-bottom: 0.5rem;
+  /*width: 75%;*/
+  padding: 0.5rem 1rem;
+
   /*height: 40px;*/
   border: 2px solid black;
   -moz-border-radius: 6px;
