--- a/src/pages/style.css
+++ b/src/pages/style.css
@@ -1,3 +1,13 @@
+.display-flex {
+  width: 100%;
+  text-align: center;
+  position: absolute;
+  top: 50vh;
+  left: 50%;
+  -webkit-transform: translate(-50%, -50%);
+  transform: translate(-50%, -50%);
+}
+
 .display-flex-talk {
   background-color: white;
   color: black;
