--- a/src/pages/style.css
+++ b/src/pages/style.css
@@ -2,7 +2,7 @@
   width: 100%;
   text-align: center;
   position: absolute;
-  top: 50vh;
+  top: 50%;
   left: 50%;
   -webkit-transform: translate(-50%, -50%);
   transform: translate(-50%, -50%);
